// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BenefitsPictures /> render with center horizontal align 1`] = `
<div
  className="mfui-benefits-pictures class-name root-class"
>
  <Grid
    guttersLeft="large"
    hAlign="left"
  >
    <GridColumn
      desktop="4"
      key="0"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="1"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<BenefitsPictures /> render with center horizontal align 2`] = `
<div
  className="mfui-benefits-pictures class-name root-class"
>
  <Grid
    guttersLeft="large"
    hAlign="left"
  >
    <GridColumn
      desktop="4"
      key="0"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="1"
      leftOffsetTablet="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="2"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<BenefitsPictures /> render with center horizontal align 3`] = `
<div
  className="mfui-benefits-pictures class-name root-class"
>
  <Grid
    guttersLeft="large"
    hAlign="left"
  >
    <GridColumn
      desktop="4"
      key="0"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="1"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="2"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="3"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<BenefitsPictures /> render with html in title and text 1`] = `
<div
  className="mfui-benefits-pictures class-name root-class"
>
  <Grid
    guttersLeft="large"
    hAlign="left"
  >
    <GridColumn
      desktop="4"
      key="0"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="image.png"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет 
          <span
            className="test"
            key="1"
          >
            123
          </span>
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis. 
          <span
            className="test-2"
            key="1"
          >
            <b
              className="test-3"
              key="0"
            >
              456
            </b>
          </span>
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="1"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="image.png"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<BenefitsPictures /> render with medium grid gap 1`] = `
<div
  className="mfui-benefits-pictures class-name root-class"
>
  <Grid
    guttersLeft="medium"
    hAlign="left"
  >
    <GridColumn
      desktop="4"
      key="0"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="1"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<BenefitsPictures /> render with medium grid gap 2`] = `
<div
  className="mfui-benefits-pictures class-name root-class"
>
  <Grid
    guttersLeft="medium"
    hAlign="left"
  >
    <GridColumn
      desktop="4"
      key="0"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="1"
      leftOffsetTablet="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="2"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<BenefitsPictures /> render with medium grid gap 3`] = `
<div
  className="mfui-benefits-pictures class-name root-class"
>
  <Grid
    guttersLeft="medium"
    hAlign="left"
  >
    <GridColumn
      desktop="4"
      key="0"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="1"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="2"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="3"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<BenefitsPictures /> renders BenefitsPictures 1`] = `
<div
  className="mfui-benefits-pictures class-name root-class"
>
  <Grid
    guttersLeft="large"
    hAlign="left"
  >
    <GridColumn
      desktop="4"
      key="0"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
    <GridColumn
      desktop="4"
      key="1"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      tablet="5"
      wide="4"
    >
      <div
        className="mfui-benefits-pictures__item item-class"
      >
        <img
          alt="alt"
          className="mfui-benefits-pictures__img mfui-benefits-pictures__img_h-align_left"
          src="test-file-stub"
        />
        <Header
          align="left"
          as="h3"
          className="mfui-benefits-pictures__title"
        >
          Интернет
        </Header>
        <Paragraph
          align="left"
        >
          Подключение к домашнему интернету осуществляется в удобное для вас время по технологиям Ethernet, Docsis.
        </Paragraph>
      </div>
    </GridColumn>
  </Grid>
</div>
`;
